[project]
name = "eppidtool"
version = "1.1.1"
description = "Tool for decoding Dell ePPIDs"
requires-python = ">=3.10"
keywords = [
    "eppid",
    "dell"
]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: System :: Hardware",
    "Topic :: Utilities",
    "Typing :: Typed"
]
dependencies = [
    "base_repr ~= 1.0.7"
]

[project.optional-dependencies]
extra = [
    "pycountry ~= 23.12.11"
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[[project.authors]]
name = "Armin Wolf"
email = "W_Armin@gmx.de"

[project.urls]
Repository = "https://github.com/Wer-Wolf/eppidtool"
Bugtracker = "https://github.com/Wer-Wolf/eppidtool/issues"

[project.scripts]
eppidtool = "eppidtool.main:main_cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = ["/.github"]

[tool.mypy]
disallow_any_unimported = true
disallow_any_generics = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true